Fix text overflow on github HTML content

--- a/src/client/app/shared/github/github/github.component.scss
+++ b/src/client/app/shared/github/github/github.component.scss
@@ -1,3 +1,7 @@
-.github-readme-container ::ng-deep code {
-	white-space: pre-line;
+div {
+	overflow-wrap: break-word;
+
+	::ng-deep code {
+		white-space: pre-line;
+	}
 }
